--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "author": "Eleven",
-  "dependencies": {},
+  "dependencies": {
+    "babel-loader": "^7.1.2"
+  },
   "scripts": {
     "start": "webpack-dev-server --color --progress --config webpack.config.js",
     "build": "node build/build.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.31",
-    "@babel/preset-env": "^7.0.0-beta.31",
-    "babel-loader": "8.0.0-beta.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.17",
     "eslint": "^4.10.0",
     "eslint-config-standard": "^10.2.1",
