--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,8 @@
         "stage-2"
     ],
     "comments": false,
-    "plugins": ["transform-runtime"]
+    "plugins": [
+    	"transform-runtime",
+    	"transform-react-jsx"
+  	]
 }
