--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "author": "Eleven",
-  "dependencies": {},
+  "dependencies": {
+    "ava": "^0.23.0"
+  },
   "scripts": {
     "start": "webpack-dev-server --color --progress --config webpack.config.js",
     "build": "node build/build.js"
@@ -9,6 +11,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
