--- a/package.json
+++ b/package.json
@@ -28,10 +28,17 @@
     "eslint-plugin-standard": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
+    "postcss-cli": "^5.0.0",
+    "postcss-import": "^11.0.0",
+    "postcss-load-config": "^1.2.0",
+    "postcss-loader": "^2.1.0",
+    "postcss-utilities": "^0.8.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "webpack": "^3.8.1",
+    "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.4"
   },
   "license": "MIT"
