--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "author": "Eleven",
+  "description": "A simple implementation of the virtual dom base on JSX",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yinone/one-dom.git"
+  },
+  "keywords": [
+    "virtual dom"
+  ],
   "dependencies": {
     "ava": "^0.23.0",
     "normalize.css": "^7.0.0"
@@ -9,6 +17,7 @@
     "build": "node build/build.js"
   },
   "devDependencies": {
+    "autoprefixer": "^7.2.5",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
@@ -34,6 +43,7 @@
     "postcss-load-config": "^1.2.0",
     "postcss-loader": "^2.1.0",
     "postcss-utilities": "^0.8.0",
+    "poststylus": "^1.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
     "stylus": "^0.54.5",
